<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/fivebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/five_pound"
        app:layout_constraintEnd_toEndOf="@+id/fifteenbtn"
        app:layout_constraintStart_toStartOf="@+id/fifteenbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tenbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/ten_pound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fifteenbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginBottom="169dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/fifteen_pound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twentybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:background="@android:drawable/btn_default_small"
        android:text="@string/twenty_pound"
        app:layout_constraintBaseline_toBaselineOf="@+id/fifteenbtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/maintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/select_msg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>